Add opt-in protection against deleting CDI CR if DVs exist.
It isn't immediately obvious to users that deleting the CDI CR
will also delete all their data volumes, and we want to protect
them from this case.

This behaviour requires opting in by adding the following to the
CDI CR:
  spec:
    uninstallStrategy: BlockUninstallIfWorkloadsExist

Test that if there is a DV and we protect against accidental deletion:
1. Deleting the DV allows deletion of CDI CR
2. Changing the uninstallStrategy allows deletion of CDI CR
