# api/openapi-spec/swagger.json
@@ -2301,6 +2301,10 @@
     "properties": {
      "imagePullPolicy": {
       "type": "string"
+     },
+     "uninstallStrategy": {
+      "description": "Specifies if CDI can be deleted if workloads are still present.\nThis is mainly a precaution to avoid accidental data loss",
+      "$ref": "#/definitions/v1alpha1.CDIUninstallStrategy"
      }
     }
    },
@@ -2327,6 +2331,7 @@
      }
     }
    },
+   "v1alpha1.CDIUninstallStrategy": {},
    "v1alpha1.DataVolume": {
     "description": "DataVolume provides a representation of our data volume\n+genclient\n+k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object",
     "required": [
